--- a/batch/docker-compose.yml
+++ b/batch/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     container_name: namenode
     volumes:
       - hadoop_namenode:/hadoop/dfs/name
+      - ./query_data:/root/query_results/
     environment:
       - CLUSTER_NAME=test
     env_file:
@@ -54,6 +55,8 @@ services:
       - PYSPARK_PYTHON=python3
     env_file:
       - ./hadoop.env
+    volumes:
+      - ./queries:/home/
 
   spark-worker1:
     image: bde2020/spark-worker:3.3.0-hadoop3.3
